# motec-i2

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: test.yml
examples/: read.rs  write.rs
samples/: Sample1.ld
src/: error.rs  full_header.rs  lib.rs  reader.rs  structs.rs  writer.rs
